@@ -89,9 +89,9 @@ public final class CFMetaData
     private final boolean isView;
     private final boolean isIndex;
 
-    public final ClusteringComparator comparator;  // bytes, long, timeuuid, utf8, etc. This is built directly from clusteringColumns
+    public volatile ClusteringComparator comparator;  // bytes, long, timeuuid, utf8, etc. This is built directly from clusteringColumns
     public final IPartitioner partitioner;            // partitioner the table uses
-    private final AbstractType<?> keyValidator;
+    private volatile AbstractType<?> keyValidator;
 
     // non-final, for now
     public volatile TableParams params = TableParams.DEFAULT;
@@ -292,10 +292,6 @@ public final class CFMetaData
         this.clusteringColumns = clusteringColumns;
         this.partitionColumns = partitionColumns;
 
-        this.comparator = new ClusteringComparator(extractTypes(clusteringColumns));
-        List<AbstractType<?>> keyTypes = extractTypes(partitionKeyColumns);
-        this.keyValidator = keyTypes.size() == 1 ? keyTypes.get(0) : CompositeType.getInstance(keyTypes);
-
         rebuild();
 
         this.resource = DataResource.table(ksName, cfName);
@@ -305,6 +301,8 @@ public final class CFMetaData
     // are kept because they are often useful in a different format.
     private void rebuild()
     {
+        this.comparator = new ClusteringComparator(extractTypes(clusteringColumns));
+
         Map<ByteBuffer, ColumnDefinition> newColumnMetadata = Maps.newHashMapWithExpectedSize(partitionKeyColumns.size() + clusteringColumns.size() + partitionColumns.size());
 
         for (ColumnDefinition def : partitionKeyColumns)
@@ -321,6 +319,9 @@ public final class CFMetaData
 
         this.columnMetadata = newColumnMetadata;
         this.hasMulticellOrCounterColumn = newHasMulticellOrCounterColumn;
+
+        List<AbstractType<?>> keyTypes = extractTypes(partitionKeyColumns);
+        this.keyValidator = keyTypes.size() == 1 ? keyTypes.get(0) : CompositeType.getInstance(keyTypes);
 
         if (isCompactTable())
             this.compactValueColumn = CompactTables.getCompactValueColumn(partitionColumns, isSuper());
